<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="notesViewModel"
            type="be.scoutswondelgem.notesapp.viewmodels.NotesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            tools:context=".ui.CreateNoteFragment"
            tools:ignore="ScrollViewSize">

            <androidx.cardview.widget.CardView
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="@{safeUnbox(notesViewModel.loadingVisibility)}"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="600dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayout_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="@{safeUnbox(notesViewModel.contentEnabled)}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_title"
                            style="@style/Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/prompt_title"
                            android:inputType="textShortMessage" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayout_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="@{safeUnbox(notesViewModel.contentEnabled)}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_content"
                            style="@style/Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/prompt_content"
                            android:inputType="textMultiLine"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_addNote"
                style="@style/Button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/default_horizontal_margin"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:layout_marginBottom="@dimen/default_vertical_margin"
                android:text="@string/action_note"
                android:enabled="false"
                android:background="@drawable/button_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>