...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_content_copy_black_24dp" />

            <ImageButton
                android:id="@+id/button_editNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_shadow"
                android:contentDescription="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
...
